# moicad

./: .gitignore  .kbconfig.yaml  .nvmrc  100_PERCENT_COMPATIBILITY_ACHIEVED.md  ANIMATION_DESIGN.md  ANIMATION_EXPORT_GUIDE.md  ARCHITECTURE.md  BSP_NORMAL_FIX.md  BUG_FIX_DOUBLE_NESTING.md  BUILD_DESKTOP.md  BUILD_GUIDE.md  CLAUDE.md  CLEANUP_SUMMARY.md  COLLABORATION_GUIDE.md  DEBUG_ORGANIZATION_COMPLETE.md  HULL_BEHAVIOR_ANALYSIS.md  HULL_TEST_RESULTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  JAVASCRIPT_API.md  JAVASCRIPT_API_STATUS.md  MCP_INTEGRATION_GUIDE.md  MONOREPO_COMPLETE.md  OPENSCAD_COMPATIBILITY.md  OPENSCAD_WASM_FINDINGS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_RESULTS.md  PHASE1_MEMORY_OPTIMIZATION.md  PRODUCTION.md  PRODUCTION_CLEANUP_SUMMARY.md  PROGRESSIVE_LOADING.md  PUBLISH_v0.1.0.md  QUICKSTART.md  README.md  README_MCP.md  RELEASE_CHECKLIST_v0.1.0.md  RELEASE_NOTES_v0.1.0.md  RELEASE_READY_v0.1.0.md  ROADMAP_ADVANCED_FEATURES.md  (+52 more)
.claude/: .mcp.json  settings.json
.dev-tools/: launch.json
backend/: MCP_README.md  config.ts  csg-three-bvh.ts  enhanced-logger.js  eval-worker.ts  file-utils.ts  health-monitoring.ts  index.ts  inspect-manifold-api.ts  manifold-2d.ts  manifold-csg.ts  manifold-evaluator.ts  manifold-extrude.ts  manifold-geometry.ts  manifold-primitives.ts  manifold-surface.ts  manifold-text.ts  manifold-transforms.ts  mcp-ai-adapter.ts  mcp-api.ts  mcp-middleware.ts  worker.ts  (+15 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+185 files in other folders)
