[package]
name = "moicad"
version = "0.1.0"
description = "OpenSCAD Clone with WASM CSG Engine"
authors = ["moicad"]
edition = "2021"

[lib]
name = "moicad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
